--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@material-ui/styles": "^4.11.4",
     "axios": "^0.21.4",
     "next": "latest",
+    "next-auth": "^3.29.0",
+    "pg": "^8.7.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.1"
