--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^5.0.0-beta.5",
     "@material-ui/styles": "^4.11.4",
     "axios": "^0.21.4",
     "next": "latest",
