feat: Views and redirects

--- a/strapiurl/api/urlshort/models/urlshort.settings.json
+++ b/strapiurl/api/urlshort/models/urlshort.settings.json
@@ -29,6 +29,11 @@
     },
     "metaimg": {
       "type": "string"
+    },
+    "view": {
+      "default": "0",
+      "min": "0",
+      "type": "biginteger"
     }
   }
 }
