--- a/strapiurl/api/urlshort/models/urlshort.settings.json
+++ b/strapiurl/api/urlshort/models/urlshort.settings.json
@@ -34,6 +34,9 @@
       "default": "0",
       "min": "0",
       "type": "biginteger"
+    },
+    "metadata": {
+      "type": "json"
     }
   }
 }
