--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "pg": "^8.7.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-meta-tags": "^1.0.1",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
