--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/styles": "^4.11.4",
     "axios": "^0.21.4",
-    "next": "latest",
+    "next": "^11.1.2",
     "next-auth": "^3.29.0",
     "pg": "^8.7.1",
     "react": "17.0.2",
