--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,9 @@
     "axios": "^0.21.4",
     "next": "^11.1.2",
     "next-auth": "^3.29.0",
+    "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-meta-tags": "^1.0.1",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
